--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "vitube",
   "version": "1.0.0",
   "description": "a backend of vitube",
+  "type" : "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "javascript",
