--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vitube",
   "version": "1.0.0",
   "description": "a backend of vitube",
-  "type" : "module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
@@ -13,5 +13,8 @@
     "backend"
   ],
   "author": "Owais",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.1.1"
+  }
 }
